--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
+    "mic-recorder-to-mp3": "^2.2.2",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
